<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FBFCFC">

    <ImageView
        android:id="@+id/login_picture"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/ic_launcher"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"/>

    <RelativeLayout
        android:id="@+id/rl_user"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/login_picture">
        <LinearLayout
            android:id="@+id/ll_user_info"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/lbs_popup_bg"
            android:orientation="vertical">
            <EditText
                android:id="@+id/account"
                android:layout_height="50dp"
                android:layout_width="match_parent"
                android:padding="5dp"
                android:inputType="text"
                android:hint="@string/et_account_hint"
                android:background="@drawable/login_et_bg"
                android:maxLength="18"
                android:layout_margin="2dp"/>
            <View
                android:layout_height="0.5dp"
                android:layout_width="match_parent"
                android:background="@color/devide_line"/>
            <EditText
                android:id="@+id/password"
                android:layout_height="50dp"
                android:layout_width="match_parent"
                android:padding="5dp"
                android:inputType="textPassword"
                android:maxLength="18"
                android:hint="@string/et_password_hint"
                android:background="@drawable/login_et_bg"
                android:layout_margin="2dp"/>
        </LinearLayout>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@id/ll_user_info"
    android:orientation="horizontal">
        <Button
            android:id="@+id/login_admin"
            android:layout_height="50dp"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:text="@string/login_admin"
            android:layout_below="@id/ll_user_info"
            android:background="@drawable/login_btn"
            android:textColor="@android:color/white"/>
    <Button
        android:id="@+id/login_stu"
        android:layout_height="50dp"
        android:layout_width="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:layout_marginRight="25dp"
        android:text="@string/login_stu"
        android:background="@drawable/login_btn"
        android:textColor="@android:color/white"/>
</LinearLayout>
    </RelativeLayout>



</RelativeLayout>
