<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".ui.adminstrator.view.activity.AdminActivity">
    <!--    波浪背景和头像-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@drawable/admin_beijin">
        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:text="我"
            android:textColor="@color/white"
            android:layout_gravity="center|top"
            android:gravity="center"
            android:layout_height="45dp" />

        <com.fx.manage.widget.WaveView
            android:id="@+id/wave_view"
            android:layout_width="match_parent"
            android:layout_height="15dp"
            android:layout_gravity="bottom" />

        <com.fx.manage.widget.CircleImageView
            android:id="@+id/img_logo"
            android:src="@drawable/admin"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            />
    </FrameLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                android:id="@+id/user_register"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                app:cardBackgroundColor="@color/blue"
                app:cardCornerRadius="16dp"
                app:cardElevation="16dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                <ImageView
                    android:layout_gravity="center_horizontal"
                    android:src="@drawable/shouye"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <TextView
                    android:layout_gravity="center_horizontal"
                    android:text="@string/shouye"
                    android:textColor="@color/white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/book_search"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                app:cardBackgroundColor="@color/green"
                app:cardCornerRadius="16dp"
                app:cardElevation="16dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/book_search"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_gravity="center_horizontal"
                        android:text="@string/book_search"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                android:id="@+id/user_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                app:cardBackgroundColor="@color/red"
                app:cardCornerRadius="16dp"
                app:cardElevation="16dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/user_search"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_gravity="center_horizontal"
                        android:text="@string/user_search"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.CardView
                android:id="@+id/publishhouse_searh"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                app:cardBackgroundColor="@color/little_blue"
                app:cardCornerRadius="16dp"
                app:cardElevation="16dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/mobile_publishhouse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_gravity="center_horizontal"
                        android:text="@string/mobile_searh"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
            <android.support.v7.widget.CardView
                android:id="@+id/book_delete"
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="3dp"
                android:layout_marginRight="3dp"
                app:cardBackgroundColor="@color/oranage"
                app:cardCornerRadius="16dp"
                app:cardElevation="16dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/book_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_gravity="center_horizontal"
                        android:text="@string/book_delete"
                        android:textColor="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
